Fix a few layout issues, make the logger more parsimonious, change the branding

--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -21,12 +21,8 @@ body
 	}
 
 .navbar-inverse .navbar-brand
-	font-family: 'Anton', sans-serif
 	color: #ABCDEF
-	&:hover {
-		color: white
-	}
-
+	font-size: 160%
 .foo-old
 	color:white
 	font: @font-family-sans-serif
